Update SelectionMenu.java